@@ -97,7 +97,7 @@ public class IndexLifecycleUsageTransportAction extends XPackUsageFeatureTranspo
                     );
                 }).collect(Collectors.toMap(Tuple::v1, Tuple::v2));
                 return new IndexLifecycleFeatureSetUsage.PolicyStats(phaseStats, policyUsage.getOrDefault(policy.getName(), 0));
-            }).collect(Collectors.toList());
+            }).toList();
             usage = new IndexLifecycleFeatureSetUsage(policyStats);
         } else {
             usage = new IndexLifecycleFeatureSetUsage();
